@@ -1,3 +1,8 @@
+2019-10-17  Georg-Johann Lay  <avr@gjlay.de>
+
+	* gcc.target/avr/progmem-error-1.cpp: Fix location of the
+	expected diagnostic.
+
 2019-10-17  Feng Xue  <fxue@os.amperecomputing.com>
 
 	PR testsuite/92125
